# lab06

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
solver_lib/: CMakeLists.txt
